<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.entrenador.ViewPlanes">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TableLayout
            android:id="@+id/tabla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tituloCorredor"
            android:padding="5dp">
        <TableRow>
            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vista de Plan: " />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/txtIdPlan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Id Plan: " />
            <EditText
                android:id="@+id/idPlan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtVistaPlanes"
                android:hint="@string/id" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/txtNombrePlan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre: " />
            <EditText
                android:id="@+id/nombrePlan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/idPlan"
                android:hint="@string/nombre_plan" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/txtDistanciaPlan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Distancia: " />
            <EditText
                android:id="@+id/distanciaPlan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nombrePlan"
                android:hint="@string/distancia" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/txtObjetivoPlan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Objetivo: " />
            <EditText
                android:id="@+id/objetivoPlan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/distanciaPlan"
                android:hint="@string/objetivo" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/txtComentarioPlan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Comentario: " />
            <EditText
                android:id="@+id/comentarioPlan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/objetivoPlan"
                android:layout_marginTop="20dp"
                android:hint="@string/comentario" />
        </TableRow>

        <TableRow
            android:padding="10dp"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/btnModificar"
                android:layout_margin="10dp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/comentarioPlan"
                android:text="@string/boton_modificar" />

            <Button
                android:id="@+id/btnEliminar"
                android:layout_margin="10dp"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_below="@+id/btnModificar"
                android:text="@string/boton_eliminar" />
        </TableRow>

        <TableRow
            android:gravity="center_horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btnListarActividades"
                android:layout_span="2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/btnModificar"
                android:text="Listar Actividades" />
        </TableRow>

        </TableLayout>



    </LinearLayout>
</ScrollView>
</RelativeLayout>