<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.entrenador.HomeEntrenador">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TableLayout
        android:id="@+id/tabla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TableRow>
        <EditText
            android:id="@+id/tituloEntrenador"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/entrenador"
            android:enabled="false"
            />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/btnPlanes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/planes_entrenador"
            />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/btnEditarEntrenador"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/boton_editar_perfil"
            />
    </TableRow>
    </TableLayout>
        <ListView
            android:id="@+id/listacorredores"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/tituloentrenador"/>
    </LinearLayout>


</RelativeLayout>