<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.entrenador.ViewPlanesDetalle">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <TableLayout
                android:id="@+id/tabla"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/tituloCorredor"
                android:padding="10dp">
            <TableRow
                android:padding="10dp">
                <TextView
                    android:id="@+id/txtTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:layout_weight="2"
                    android:textSize="20dp"
                    android:text="Alta Actividad: " />
            </TableRow>

            <TableRow
                android:padding="10dp">
                <TextView
                    android:id="@+id/txtSemana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="15dp"
                    android:text="Semana: " />
                <Spinner
                    android:id="@+id/spinnerSemana"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/semana"/>
            </TableRow>

                <TableRow
                    android:padding="10dp">
                    <TextView
                        android:id="@+id/txtDia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="15dp"
                        android:text="Dia: " />
                    <Spinner
                        android:id="@+id/spinnerDia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:hint="@string/dia"/>
                </TableRow>

                <TableRow
                    android:padding="10dp">
                    <TextView
                        android:id="@+id/txtTurno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="15dp"
                        android:text="Turno: " />
                    <Spinner
                        android:id="@+id/spinnerTurno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:hint="@string/turno"/>
                </TableRow>

                <TableRow
                    android:padding="10dp">
                    <EditText
                        android:id="@+id/descripcion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/turno"
                        android:hint="@string/descripcion"
                        android:layout_span="2"
                        android:layout_weight="2"/>
                </TableRow>

        </TableLayout>
            <Button
                android:id="@+id/btnAceptarDia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/descripcion"
                android:text="@string/boton_aceptar_día"
                />

            <Button
                android:id="@+id/btnFinalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/btnAceptarDia"
                android:text="Finalizar"
                />
            <Button
                android:id="@+id/btnImportarPlan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/btnAceptarDia"
                android:text="@string/importar_plan"
                />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>