<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.ViewPlanesDetalle">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/altaActividad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:enabled="false"
                android:hint="Actividad Pendiente"
                />
            <EditText
                android:id="@+id/semana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:enabled="false"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/altaActividad"
                android:hint="@string/semana" />
            <EditText
                android:id="@+id/dia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:layout_marginTop="10dp"
                android:textSize="10dp"
                android:layout_below="@+id/semana"
                android:hint="@string/dia"/>
            <EditText
                android:id="@+id/turno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:layout_marginTop="10dp"
                android:textSize="10dp"
                android:hint="@string/turno" />
            <EditText
                android:id="@+id/descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:layout_marginTop="10dp"
                android:textSize="15dp"
                android:layout_below="@+id/turno"
                android:hint="@string/descripcion" />
            <Button
                android:id="@+id/btnIniciar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_below="@+id/descripcion"
                android:text="Iniciar"
                />

            <Button
                android:id="@+id/btnCargarArchivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/btnIniciar"
                android:text="Cargar Archivo"
                />

            <Button
                android:id="@+id/btnFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/btnIniciar"
                android:text="FeedBack"
                />
            <Button
                android:id="@+id/btnFinalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/btnAceptarDia"
                android:text="Finalizar"
                />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>