<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.entrenador.ViewEditarPerfilEntrenador">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <TableLayout
                android:id="@+id/tabla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tituloCorredor"
                android:padding="5dp">
                <TableRow>
                    <TextView
                        android:id="@+id/txtTitulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:layout_weight="2"
                        android:text="Datos Personales Entrenador: " />
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/txtNombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nombre: " />
                    <EditText
                        android:id="@+id/nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="15dp"
                        android:layout_below="@+id/username"
                        android:hint="@string/nombre"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/txtNacimiento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Fecha Nac: " />
                    <EditText
                        android:id="@+id/fechaNacimiento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="15dp"
                        android:layout_below="@+id/nombre"
                        android:hint="fecha nacimiento (YYYY-MM-DD)"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/txtCiudad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ciudad: " />
                    <EditText
                        android:id="@+id/ciudad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="15dp"
                        android:layout_below="@+id/fechaNacimiento"
                        android:hint="ciudad"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/txtPais"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pais: " />
                    <EditText
                        android:id="@+id/pais"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="15dp"
                        android:layout_below="@+id/ciudad"
                        android:hint="pais"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/txtEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Correo: " />
                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="15dp"
                        android:layout_below="@+id/pais"
                        android:hint="@string/correo"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/txtComentario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Comentario: " />
                    <EditText
                        android:id="@+id/comentario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="15dp"
                        android:layout_below="@+id/email"
                        android:hint="@string/comentario"
                        />
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/txtFormacion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Formacion: " />
                    <EditText
                        android:id="@+id/peso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="15dp"
                        android:layout_below="@+id/linea"
                        android:hint="formacion"
                        />
                </TableRow>

            </TableLayout>
            <Button
                android:id="@+id/btnFinalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/tabla"
                android:text="@string/boton_finalizar"
                />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>